# auto-poster

./: .env.example  .gitignore  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  commands.py  main.py
app/api/: auth.py  media.py  posts.py  tiktok_oauth.py
app/auth/: dependencies.py  tokens.py
app/core/: config.py
app/db/: session.py
app/integrations/tiktok/: __init__.py  oauth.py  publishing.py
app/models/: __init__.py  media_asset.py  post.py  social_account.py  user.py
app/schemas/: media.py  post.py  user.py
app/services/: media_assets.py  posts.py  publishing.py
app/worker/: celery_app.py  tasks.py
migrations/: README  env.py
migrations/versions/: 202605041430_initial_schema.py  202605041500_create_users.py  202605041530_create_social_accounts.py  202605041600_create_media_assets.py  202605041630_create_posts.py  202605041700_add_posts_scheduled_at.py  202605041730_add_posts_error_message.py
tests/: test_auth.py  test_celery.py  test_config.py  test_health.py  test_media_asset.py  test_post.py  test_publishing_task.py  test_scheduled_posts.py  test_social_account.py  test_tiktok_oauth.py  test_tiktok_publishing.py
