[project]
name = "auto-posting"
version = "0.1.0"
description = "Backend API for automated social media posting."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0,<2.0.0",
    "celery[redis]>=5.4.0,<6.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.scripts]
api = "app.commands:run_api"
worker = "app.commands:run_worker"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
